@@ -1,6 +1,8 @@
 package cotato.csquiz.service;
 
 import cotato.csquiz.domain.dto.mypage.HallOfFameInfo;
+import cotato.csquiz.domain.dto.mypage.HallOfFameResponse;
+import cotato.csquiz.domain.dto.mypage.MyHallOfFameInfo;
 import cotato.csquiz.domain.entity.Generation;
 import cotato.csquiz.domain.entity.Member;
 import cotato.csquiz.domain.entity.Quiz;
@@ -9,6 +11,7 @@ import cotato.csquiz.domain.entity.Scorer;
 import cotato.csquiz.exception.AppException;
 import cotato.csquiz.exception.ErrorCode;
 import cotato.csquiz.repository.GenerationRepository;
+import cotato.csquiz.repository.MemberRepository;
 import cotato.csquiz.repository.QuizRepository;
 import cotato.csquiz.repository.RecordRepository;
 import cotato.csquiz.repository.ScorerRepository;
@@ -32,15 +35,40 @@ public class MyPageService {
     private final QuizRepository quizRepository;
     private final ScorerRepository scorerRepository;
     private final RecordRepository recordRepository;
+    private final MemberRepository memberRepository;
     private static final int SHOW_PEOPLE_COUNT = 5;
 
-    public void getHallOfFame(Long generationId) {
+    public HallOfFameResponse getHallOfFame(Long generationId, String email) {
         Generation generation = generationRepository.findById(generationId).orElseThrow(() ->
                 new AppException(ErrorCode.GENERATION_NOT_FOUND)
         );
         List<Quiz> quizzes = quizRepository.findByGeneration(generation);
         List<HallOfFameInfo> scorerHallOfFame = makeScorerHallOfFame(quizzes);
         List<HallOfFameInfo> answerHallOfFame = makeAnswerHallOfFame(quizzes);
+        MyHallOfFameInfo myHallOfFameInfo = makeMyHallOfFameInfo(email, quizzes);
+        return HallOfFameResponse.from(scorerHallOfFame, answerHallOfFame, myHallOfFameInfo);
+    }
+
+    private MyHallOfFameInfo makeMyHallOfFameInfo(String email, List<Quiz> quizzes) {
+        Member member = memberRepository.findByEmail(email)
+                .orElseThrow(() -> new AppException(ErrorCode.MEMBER_NOT_FOUND));
+        long scorerCount =  countMyScorer(member,quizzes);
+        long answerCount = countMyAnswer(member,quizzes);
+        return MyHallOfFameInfo.from(member, scorerCount, answerCount);
+    }
+
+    private long countMyScorer(Member member, List<Quiz> quizzes) {
+        List<Scorer> memberScorers = quizzes.stream()
+                .flatMap(quiz -> scorerRepository.findAllByQuizAndMember(quiz, member).stream())
+                .toList();
+        return memberScorers.size();
+    }
+
+    private long countMyAnswer(Member member, List<Quiz> quizzes) {
+        List<Record> memberRecords = quizzes.stream()
+                .flatMap(quiz -> recordRepository.findAllByQuizAndIsCorrectAndMember(quiz, true, member).stream())
+                .toList();
+        return memberRecords.size();
     }
 
     private List<HallOfFameInfo> makeAnswerHallOfFame(List<Quiz> quizzes) {
@@ -70,13 +98,13 @@ public class MyPageService {
     private List<Scorer> findScorerByQuizzes(List<Quiz> quizzes) {
         return quizzes.stream()
                 .flatMap(quiz -> scorerRepository.findAllByQuiz(quiz).stream())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private List<Record> findRecordByQuizzes(List<Quiz> quizzes) {
         return quizzes.stream()
                 .flatMap(quiz -> recordRepository.findAllByQuizAndIsCorrect(quiz, true).stream())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private static List<Entry<Member, Long>> sorted5MemberEntry(Map<Member, Long> countByMember) {
